dynamically link art requests for User

--- a/Views/Home/YourCustomRequest.cshtml
+++ b/Views/Home/YourCustomRequest.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Your Art Requests";
 }
 @using Microsoft.AspNetCore.Identity
@@ -10,55 +9,61 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top p-md-3 ">
     <div class="container-fluid py-0">
         <a class="navbar-brand font1  text-white fs-1 heading" asp-area="" asp-controller="Home" asp-action="Index">
-            <img src="~/img/logo.png" class="logo-img mb-2"
-                 style="width: 3rem; height: 3rem;" alt="">Store To Door
+            <img src="~/img/logo.png" class="logo-img mb-2" style="width: 3rem; height: 3rem;" alt="">Store To Door
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto  mb-2 mb-lg-0 ">
                 <li class="nav-item">
-                    <a class="nav-link font2  mx-2 item-1 text-white" aria-current="page"
-                       asp-area="" asp-controller="Home" asp-action="Index">HOME</a>
+                    <a class="nav-link font2  mx-2 item-1 text-white" aria-current="page" asp-area=""
+                        asp-controller="Home" asp-action="Index">HOME</a>
                 </li>
-                
-               <li class="nav-item">
+
+                <li class="nav-item">
                     <a class="nav-link font2 mx-2 item-2 text-white" asp-controller="home" asp-action="About">ABOUT</a>
-                </li> 
+                </li>
                 @if (User.Identity.IsAuthenticated)
                 {
                     var loggedInUser = await UserManager.FindByNameAsync(User.Identity.Name);
-                    
+
                     @if (await UserManager.IsInRoleAsync(loggedInUser, UserRoles.User))
                     {
-                        <li class="nav-item dropdown">
-                            <a class="nav-link font2  mx-2 item-3 text-white"
-                       id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            SHOP
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
-                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By Medium</a></li>
-                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By Artist</a></li>
-                        </ul>
-                    </li>}
-                }else{
-                    <li class="nav-item dropdown">
-                            <a class="nav-link font2  mx-2 item-3 text-white"
-                       id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            SHOP
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
-                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By Medium</a></li>
-                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By Artist</a></li>
-                        </ul>
-                    </li>
+                                                        <li class="nav-item dropdown">
+                                                            <a class="nav-link font2  mx-2 item-3 text-white" id="navbarDarkDropdownMenuLink" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                                                                SHOP
+                                                            </a>
+                                                            <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
+                                                                <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By
+                                                                        Medium</a></li>
+                                                                <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By
+                                                                        Artist</a></li>
+                                                            </ul>
+                                                        </li>
+                    }
+                }
+                else
+                {
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link font2  mx-2 item-3 text-white" id="navbarDarkDropdownMenuLink" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                                            SHOP
+                                        </a>
+                                        <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
+                                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbymedium">By
+                                                    Medium</a></li>
+                                            <li><a class="dropdown-item drop1 font2" asp-controller="home" asp-action="Shopbyartist">By
+                                                    Artist</a></li>
+                                        </ul>
+                                    </li>
                 }
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link  font2 mx-2 item-4 text-white active bottom-red" id="navbarDropdown" role="button"
-                       data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link  font2 mx-2 item-4 text-white active bottom-red" id="navbarDropdown"
+                        role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         PROFILE
                     </a>
                     <partial name="_LoginPartial" />
@@ -81,97 +86,82 @@
                 @if (User.Identity.IsAuthenticated)
                 {
                     var loggedInUser = await UserManager.FindByNameAsync(User.Identity.Name);
-                    
-                    @if (await UserManager.IsInRoleAsync(loggedInUser, UserRoles.User)){
-                    <li class="nav-item">
-                        <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white">CART</a>
-                        </li>}
+
+                    @if (await UserManager.IsInRoleAsync(loggedInUser, UserRoles.User))
+                    {
+                                                        <li class="nav-item">
+                                                            <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white">CART</a>
+                                                        </li>
+                    }
                 }
                 else
                 {
-                    <li class="nav-item">
-                        <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white">CART</a>
-                        </li>
+                                    <li class="nav-item">
+                                        <a asp-controller="home" asp-action="Cart" class="nav-link font2 mx-2 item-5 text-white">CART</a>
+                                    </li>
                 }
 
                 @if (User.Identity.IsAuthenticated)
                 {
                     @if (await UserManager.IsInRoleAsync(UserManager.GetUserAsync(User).Result, "Admin"))
                     {
-                        <li class="nav-item">
-                            <a asp-controller="home" asp-action="Admin" class="nav-link font2 mx-2 item-6 text-white">ADMIN</a>
-                </li> }}
-                 @if (User.Identity.IsAuthenticated)
+                                                        <li class="nav-item">
+                                                            <a asp-controller="home" asp-action="Admin" class="nav-link font2 mx-2 item-6 text-white">ADMIN</a>
+                                                        </li>
+                    }
+
+                }
+                @if (User.Identity.IsAuthenticated)
                 {
                     @if (await UserManager.IsInRoleAsync(UserManager.GetUserAsync(User).Result, "Artist"))
                     {
-                   @*     <li class="nav-item">
-                            <a asp-controller="home" asp-action="ArtistProfile" class="nav-link font2 mx-2 item-6 text-white">ARTIST</a>
-                </li> *@
-                  <li><a class="nav-link font2 mx-2 item-6 text-white" asp-controller="home" asp-action="CustomArtRequest">ART  REQUESTS</a></li>
-                    }}
+                        @* <li class="nav-item">
+                            <a asp-controller="home" asp-action="ArtistProfile" class="nav-link font2 mx-2 item-6
+                            text-white">ARTIST</a>
+                            </li> *@
+                                                        <li><a class="nav-link font2 mx-2 item-6 text-white" asp-controller="home"
+                        asp-action="CustomArtRequest">ART REQUESTS</a></li>
+                    }
+
+                }
             </ul>
             <div class="nav-item search-box rounded-pill bg-dark ms-3">
                 <input type="text" class="search-txt float-start fs-6 text-white" placeholder="search here..">
                 <a class="nav-link font2 search-btn d-flex justify-content-center align-items-center rounded-circle text-white"
-                   href="#"><img style="width:1rem; height:1rem;" src="~/img/search.png"></a>
+                    href="#"><img style="width:1rem; height:1rem;" src="~/img/search.png"></a>
             </div>
         </div>
     </div>
 </nav>
- <section class="my-5 py-5">
-        <div class="container">
-            <div class="text-center my-5">
-                <span class="font1 text-rose fw-bold heading  m-auto  border-3 border-bottom border-dark">
-                   Custom Art Requests
-                </span>
-            </div>
-            <div class="row border border-1 my-3 shadow p-3 text-center">
-               @* <div class="col-lg-1 col-md-1  my-1">
-                    <button type="button" class="btn-close shadow-none" aria-label="Close"></button>
-                </div>*@
-                <div class="col-lg-3 col-md-3 my-1">
-                    <img src="~/img/painting4.jpg" style="height: 6rem; width: 6rem;" alt="">
-                </div>
-                <div class="col-lg-4 col-md-4  my-1">
-                    <span class="font2 fs-6 d-block pt-2">To Craft World</span>
-                </div> 
-                <div class="col-lg-5 col-md-5 my-1">
-                    <label for="exampleFormControlTextarea1" class="form-label">
-                        Customization details
-                       </label>
-                          <textarea class="form-control shadow-none text-area" id="exampleFormControlTextarea1" rows="3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</textarea>
-                </div>
-                @*<div class="col-lg-3 col-md-2 my-1">
-                    <label for="exampleFormControlTextarea1" class="form-label">
-                      Reply
-                     </label>
-                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                </div>*@
-            </div>
-            <div class="row border border-1 my-3 shadow p-3 text-center">
-               @* <div class="col-lg-1 col-md-1  my-1">
-                    <button type="button" class="btn-close shadow-none" aria-label="Close"></button>
-                </div>*@
-                <div class="col-lg-3 col-md-3 my-1">
-                    <img src="~/img/sketch1.jpg" style="height: 6rem; width: 6rem;" alt="">
-                </div>
-                <div class="col-lg-4 col-md-4  my-1">
-                    <span class="font2 fs-6 d-block pt-2">To Craftiness</span>
-                </div> 
-                <div class="col-lg-5 col-md-5 my-1">
-                    <label for="exampleFormControlTextarea1" class="form-label">
-                        Customization details
-                       </label>
-                       <textarea class="form-control shadow-none text-area" id="exampleFormControlTextarea1" rows="3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</textarea>
-                </div>
-                @*<div class="col-lg-3 col-md-2 my-1">
-                    <label for="exampleFormControlTextarea1" class="form-label">
-                      Reply
-                     </label>
-                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                </div>*@
-            </div>
-         @* <a class="border-0 bg-rose float-end text-white btn-sm my-3 mx-2 px-5 py-2 font2 rounded text-decoration-none">Send</a>*@
+<section class="my-5 py-5">
+    <div class="container">
+        <div class="text-center my-5">
+            <span class="font1 text-rose fw-bold heading  m-auto  border-3 border-bottom border-dark">
+                Custom Art Requests
+            </span>
         </div>
-    </section>
+        @foreach (var item in ViewBag.ArtRequests)
+        {
+            @* var requestArtist = await UserManager.FindByIdAsync(item.ArtistId); *@
+            var requestArtist = await UserManager.FindByIdAsync(item.ArtistId);
+
+            <div class="row border border-1 my-3 shadow p-3 text-center">
+                <div class="col-lg-3 col-md-3 my-1">
+                    <img src="~/img/default-art.jpg" style="height: 6rem; width: 6rem;" alt="">
+                </div>
+
+                <div class="col-lg-4 col-md-4  my-1">
+                    <h3 class="font2 fs-6 d-block pt-2">Artist</h3>
+                    <span class="font2 fs-6 d-block pt-2">@requestArtist.AccountName</span>
+                </div>
+
+                <div class="col-lg-5 col-md-5 my-1">
+                    <label for="exampleFormControlTextarea1" class="form-label">
+                        Customization details
+                    </label>
+                    <p>@item.Description</p>
+                </div>
+            </div>
+        }
+    </div>
+</section>
