--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,6 +14,9 @@
     <!--google font-->
     <link href="https://fonts.googleapis.com/css2?family=Licorice&display=swap" rel="stylesheet">
     <!--  <link rel="stylesheet" href="~/Storetodoor.styles.css" asp-append-version="true" /> -->
+
+    <link rel="shortcut icon" href="~/favicon.png" type="image/png">
+    
 </head>
 <body>
     <!--  <header>
