added new categories in shopbymedium

--- a/Views/Home/CustomArt.cshtml
+++ b/Views/Home/CustomArt.cshtml
@@ -40,13 +40,13 @@
                         <div class="row py-2">
 
                             <div class="mb-3">
-                                <input type="hidden" name="ArtistId" value="@(ViewBag.ArtistId)">
-                                <label for="exampleFormControlTextarea1" class="form-label">
+                                <input type="hidden" name="ArtistId" value="@(ViewBag.ArtistId) ">
+                                <label for="exampleFormControlTextarea1" class="form-label" >
                                     Describe the artwork you want to buy including the size , style or any
                                     content idea.
                                 </label>
                                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
-                                    name="Description"></textarea>
+                                    name="Description" placeholder="Mention your email And WhatsApp Number along description.."></textarea>
                             </div>
                         </div>
                         <div class="d-grid gap-2 col-sm-6 col-12 ms-auto me-auto pt-3">
